more changes to form

--- a/frontend/src/posts/PostsList.scss
+++ b/frontend/src/posts/PostsList.scss
@@ -18,9 +18,10 @@ font-size: medium;
     font-style: italic;
     border: 5px solid $color;
 }
-.setimage {
+.setimage 
+{
     @include images(40px);
-    }
+}
     
 .likedby
 {
