--- a/frontend/src/posts/PostsList.scss
+++ b/frontend/src/posts/PostsList.scss
@@ -1,12 +1,13 @@
 
 @mixin images($width) {
     width: $width;
+    border: 1px;
 }
 
 @mixin containerdetails($color: rgb(43, 144, 175)) {
 background-color: $color;
 font-size: medium;
-border: 5px solid black;
+border: 3px solid black;
 margin: 5px;
 flex-direction: row;
 }
@@ -19,9 +20,10 @@ flex-direction: row;
 {
     flex-direction: row;
     font-style: bold;
-    border: 5px inset $color;
+    border: 1px inset $color;
     margin-top: 5px;
 }
+
 @mixin button($color) {
     font-size: 14px;
     line-height: 1;
@@ -30,6 +32,35 @@ flex-direction: row;
     padding: 10px 20px;
     background-color: $color;
 }
+
+.setimage 
+{
+    @include images(40px);
+}
+
+.setimage:hover
+{
+    @include images(75px);
+}
+  
+.messageBox {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.textMessage {
+    display: flex;
+    font-size: small;
+    align-items: flex-start;
+    flex-direction: column;
+}
+.imgBox {
+    @include images(40px);
+    justify-content: flex-start;
+
+}
+
 .buttonBox {
     display: flex;
     flex-direction: row;
@@ -37,23 +68,24 @@ flex-direction: row;
 }
 
 .like-button{
-    @include button(lightyellow);
+    @include button(yellow);
 }
 .dislike-button{
     @include button(red);
 }
-
-.setimage 
-{
-    @include images(40px);
-}
-    
+  
 .likedby
 {
     @include detailsection();
+    font-weight: bold;
 }
-
 .dislikedby
 {
     @include detailsection(lightgreen);
+    font-weight: bold;
+}
+.likelist, .dislikelist {
+    font-size: 10px;
+    font-style: italic;
+    font-weight: normal;
 }
