--- a/frontend/src/users/UserDetails.scss
+++ b/frontend/src/users/UserDetails.scss
@@ -18,73 +18,23 @@
 //     }
 // }
 /* Add your styles here. */
-@keyframes MY_ANIMATION 
-{
- 0% { background: green 
-}
- 25% { background: red 
-}
- 75% { background: purple 
-}
- 100% { background: yellow 
-}
-}
 
-
-.menuPadHidden {
-  display : none;
-}
-
-.menuPadShow {
-  animation: MY_ANIMATION 4s;
-  position: absolute;
-  display : flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  right: 0;
-  width: 50%;
-  height: 100%;
-  background: #252A38;
-  opacity: 90%;
-  gap: 30px;
-}
-
-.menuLink{
-  font-weight: 400;
-  font-size: 24px;
-}
-
-
-body {
-  background : #252A38;
-  color: #DCDCDC;
-  font-family: Segoe UI;
-  font-weight: 400;
-  font-size:  14px;
-  line-height: 20px;
-
-}
+@use "../../public/styles.scss";
 
 .postedBy {
-  font-weight: 600;
+  font-weight: $font-weight-bold;
 }
 
 .createdAt {
-  font-weight: 300;
-  font-size:  10px;
-  line-height: 16px;
+  font-weight: $font-weight-lighter;
+  font-size:  $font-size-secondary;
+  line-height: $line-height-secondary;
 }
 
 .buttonBox button {
-  font-size: 20px;
-  line-height: 32px;
+  font-size: $font-size-button;
+  line-height: $line-height-button;
 }
-
-/* .message {
-  font-size:  14px;
-} */
 
 a:hover {
   color: #2985FF;
@@ -297,12 +247,10 @@ body {
 
 .userPosts {
   display: flex;
-  flex-direction: row;
-  /* justify-content: flex-start;
-  align-items: flex-start;  */
+  // flex-direction: row;
   overflow-x: auto;
   flex-wrap: nowrap;
-  padding : 24px;
+  // padding : 24px;
 }
 
 .userSinglePost {
@@ -315,4 +263,28 @@ body {
 
 .userSinglePost img {
   width: 300px;
+}
+
+
+.userDetails {
+  background : #252A38;
+  color: #DCDCDC;
+  font-family: Segoe UI;
+  font-weight: 400;
+  font-size:  14px;
+  line-height: 20px;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.postsSession {
+  display: flex;
+  flex-direction: column;
+}
+
+#root {
+  margin: 0;
+  padding: 0;
+  max-width: 100vw;
 }
