--- a/frontend/src/users/UserDetails.scss
+++ b/frontend/src/users/UserDetails.scss
@@ -19,26 +19,8 @@
 // }
 /* Add your styles here. */
 
-@use "../../public/styles.scss";
-
-$bkg: #252A38;
-$darker-bkg: #141820;
-$default-fgd: #DCDCDC;
-$primary: #2985FF;
-$font-family: Segoe UI;
-$font-weight-regular: 400;
-$font-weight-bold: 600;
-$font-weight-lighter: 300;
-$font-size-tile: 24px;
-$font-size-subtitle: 20px;
-$font-size-button: 20px;
-$font-size-body: 14px;
-$font-size-secondary: 10px;
-$line-height-title: 24px;
-$line-height-subtitle: 24px;
-$line-height-button: 32px;
-$line-height-body: 20px;
-$line-height-secondary: 16px;
+@use '../../public/variables' as *;
+@use '../../public/styles' as styles;
 
 .postedBy {
   font-weight: $font-weight-bold;
@@ -50,149 +32,9 @@ $line-height-secondary: 16px;
   line-height: $line-height-secondary;
 }
 
-.buttonBox button {
-  font-size: $font-size-button;
-  line-height: $line-height-button;
-}
-
-a:hover {
-  color: #2985FF;
-}
-
-.parent {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center; 
-    padding : 24px;
-  }
-
-.child {
-    background: #151820;
-    /* margin: 3px; */
-    width: 100%;
-    margin: 12px;
-
-  }
-
 .childText{
   padding : 16px;
 }
-
-.child img {
-    width: 100%;
-}
-
-.buttonBox {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center; 
-  }
-
-/* .ldButton {
-    /* width: 100%; 
-} */
-
-.LikeDislike{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: flex-start; 
-}
-
-
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) { }
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-  /* .child {
-    width: 70%;
-  } */
-
-  .parent {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start; 
-    flex-wrap: wrap;
-  }
-
-  .child {
-    width: 40%;
-  }
-
-  .menuPadShow{
-    width : 40%
-  }
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-    .parent {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: flex-start; 
-        flex-wrap: wrap;
-      }
-
-      .child {
-        width: 30%;
-      }
-
-      .menuPadShow{
-        width : 30%
-      }
- }
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) { 
-    .parent {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: flex-start; 
-        flex-wrap: wrap;
-      }
-
-      .child {
-        width: 30%;
-      }
-
-      .menuPadShow{
-        width : 20%
-      }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) { 
-    .parent {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: flex-start; 
-        flex-wrap: wrap;
-      }
-
-      .child {
-        width: 30%;
-      }
-    
-      .menuPadShow{
-        width : 20%
-      }
-}
-
-
-
-
-
-body {
-  margin: 0;
-}
-
 
 .imageParent {
   position: relative;
@@ -221,8 +63,8 @@ body {
   top: 60%;
   left: 0;
   height: 40%;
-   width: 100%;
-  background:#252A38;
+  width: 100%;
+  background:$bkg;
   opacity: 50%;
 }
 
@@ -230,35 +72,25 @@ body {
   position: absolute;
   top: 70%;
   left: 50%;
-  font-weight: 400;
-  font-size: 24px;
+  font-weight: $font-weight-regular;
+  font-size: $font-size-title;
 }
 
 .username{
   position: absolute;
   top: 110%;
   left: 50%;
-  font-weight: 600;
-  font-size: 14px;
+  font-weight: $font-weight-bold;
+  font-size: $font-size-body;
 }
 
 .email{
   position: absolute;
   top: 120%;
   left: 50%;
-  font-weight: 300;
-  font-size: 10px;
+  font-weight: $font-weight-lighter;
+  font-size: $font-size-secondary;
 }
-
- /* .coverForeground {
-  z-index: 2;
-  position: absolute;
-  /* top: 20%; */
-  /* background: pink;
- /* left: 10%;*/
-  /* height: 100px;
-  width : 400px
-}   */ 
 
 .profileSession {
   height: 200px;
@@ -266,35 +98,24 @@ body {
 
 .userPosts {
   display: flex;
-  // flex-direction: row;
   overflow-x: auto;
   flex-wrap: nowrap;
-  // padding : 24px;
+  padding : 24px;
 }
 
 .userSinglePost {
-  background: #151820;
-  /* margin: 3px; */
+  background: $darker-bkg;
   width: 100%;
   margin: 12px;
 
-}
+  img {
+    width: 300px;
+  }
 
-.userSinglePost img {
-  width: 300px;
 }
-
 
 .userDetails {
-  background : #252A38;
-  color: #DCDCDC;
-  font-family: Segoe UI;
-  font-weight: 400;
-  font-size:  14px;
-  line-height: 20px;
-  display: flex;
-  flex-direction: column;
-
+  @include styles.main-styles;
 }
 
 .postsSession {
