--- a/frontend/src/posts/PostsList.scss
+++ b/frontend/src/posts/PostsList.scss
@@ -1,91 +1,232 @@
 
-@mixin images($width) {
-    width: $width;
-    border: 1px;
-}
+// @mixin images($width) {
+//     width: $width;
+//     border: 1px;
+// }
 
-@mixin containerdetails($color: rgb(43, 144, 175)) {
-background-color: $color;
-font-size: medium;
-border: 3px solid black;
-margin: 5px;
-flex-direction: row;
-}
+// @mixin containerdetails($color: rgb(43, 144, 175)) {
+// background-color: $color;
+// font-size: medium;
+// border: 3px solid black;
+// margin: 5px;
+// flex-direction: row;
+// }
 
-.container { 
-    @include containerdetails(white);
-}
+// .container { 
+//     @include containerdetails(white);
+// }
 
-@mixin detailsection ($color: rgb(99, 11, 45))
-{
-    flex-direction: row;
-    font-style: bold;
-    border: 1px inset $color;
-    margin-top: 5px;
-}
+// @mixin detailsection ($color: rgb(99, 11, 45))
+// {
+//     flex-direction: row;
+//     font-style: bold;
+//     border: 1px inset $color;
+//     margin-top: 5px;
+// }
 
-@mixin button($color) {
-    font-size: 14px;
-    line-height: 1;
-    text-transform: uppercase;
-    font-weight: bold;
-    padding: 10px 20px;
-    background-color: $color;
-}
+// @mixin button($color) {
+//     font-size: 14px;
+//     line-height: 1;
+//     text-transform: uppercase;
+//     font-weight: bold;
+//     padding: 10px 20px;
+//     background-color: $color;
+// }
 
-.setimage 
-{
-    @include images(40px);
-}
+// .setimage 
+// {
+//     @include images(40px);
+// }
 
-.setimage:hover
-{
-    @include images(75px);
-}
+// .setimage:hover
+// {
+//     @include images(75px);
+// }
   
-.messageBox {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
+// .messageBox {
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: space-around;
+// }
 
-.textMessage {
+// .textMessage {
+//     display: flex;
+//     font-size: small;
+//     align-items: flex-start;
+//     flex-direction: column;
+// }
+// .imgBox {
+//     @include images(40px);
+//     justify-content: flex-start;
+
+// }
+
+// .buttonBox {
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: center;
+// }
+
+// .like-button{
+//     @include button(yellow);
+// }
+// .dislike-button{
+//     @include button(red);
+// }
+  
+// .likedby
+// {
+//     @include detailsection();
+//     font-weight: bold;
+// }
+// .dislikedby
+// {
+//     @include detailsection(lightgreen);
+//     font-weight: bold;
+// }
+// .likelist, .dislikelist {
+//     font-size: 10px;
+//     font-style: italic;
+//     font-weight: normal;
+// }
+
+
+.postedBy {
+    font-weight: 600;
+  }
+  
+  .createdAt {
+    font-weight: 300;
+    font-size:  10px;
+    line-height: 16px;
+  }
+  
+  .buttonBox button {
+    font-size: 20px;
+    line-height: 32px;
+  }
+
+  .parent {
     display: flex;
-    font-size: small;
-    align-items: flex-start;
     flex-direction: column;
-}
-.imgBox {
-    @include images(40px);
     justify-content: flex-start;
+    align-items: center; 
+    padding : 24px;
+  }
 
+.child {
+    background: #151820;
+    /* margin: 3px; */
+    width: 100%;
+    margin: 12px;
+
+  }
+
+.childText{
+  padding : 16px;
+}
+
+.child img {
+    width: 100%;
 }
 
 .buttonBox {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-}
+    justify-content: space-evenly;
+    align-items: center; 
+  }
 
-.like-button{
-    @include button(yellow);
-}
-.dislike-button{
-    @include button(red);
-}
+
   
-.likedby
-{
-    @include detailsection();
-    font-weight: bold;
-}
-.dislikedby
-{
-    @include detailsection(lightgreen);
-    font-weight: bold;
-}
-.likelist, .dislikelist {
-    font-size: 10px;
-    font-style: italic;
-    font-weight: normal;
-}
+.LikeDislike{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start; 
+  }
+  
+  
+  /* Extra small devices (phones, 600px and down) */
+  @media only screen and (max-width: 600px) { }
+  
+  /* Small devices (portrait tablets and large phones, 600px and up) */
+  @media only screen and (min-width: 600px) {
+    /* .child {
+      width: 70%;
+    } */
+  
+    .parent {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: flex-start; 
+      flex-wrap: wrap;
+    }
+  
+    .child {
+      width: 40%;
+    }
+  
+    .menuPadShow{
+      width : 40%
+    }
+  }
+  
+  /* Medium devices (landscape tablets, 768px and up) */
+  @media only screen and (min-width: 768px) {
+      .parent {
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-start;
+          align-items: flex-start; 
+          flex-wrap: wrap;
+        }
+  
+        .child {
+          width: 30%;
+        }
+  
+        .menuPadShow{
+          width : 30%
+        }
+   }
+  
+  /* Large devices (laptops/desktops, 992px and up) */
+  @media only screen and (min-width: 992px) { 
+      .parent {
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-start;
+          align-items: flex-start; 
+          flex-wrap: wrap;
+        }
+  
+        .child {
+          width: 30%;
+        }
+  
+        .menuPadShow{
+          width : 20%
+        }
+  }
+  
+  /* Extra large devices (large laptops and desktops, 1200px and up) */
+  @media only screen and (min-width: 1200px) { 
+      .parent {
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-start;
+          align-items: flex-start; 
+          flex-wrap: wrap;
+        }
+  
+        .child {
+          width: 30%;
+        }
+      
+        .menuPadShow{
+          width : 20%
+        }
+  }
+  
