add menu and hamburger button, not refractor yet

--- a/frontend/src/posts/PostsList.scss
+++ b/frontend/src/posts/PostsList.scss
@@ -229,4 +229,33 @@
           width : 20%
         }
   }
+
+
+  
+
+.menuPadHidden {
+    display : none;
+  }
+  
+  .menuPadShow {
+    z-index: 100;
+    position: absolute;
+    display : flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 100%;
+    background: #252A38;
+    opacity: 90%;
+    gap: 30px;
+  }
+  
+  .menuLink{
+    font-weight: 400;
+    font-size: 24px;
+  }
+  
   
