--- a/frontend/public/_variables.scss
+++ b/frontend/public/_variables.scss
@@ -16,3 +16,4 @@ $line-height-subtitle: 24px;
 $line-height-button: 32px;
 $line-height-body: 20px;
 $line-height-secondary: 16px;
+$hamburger-line-bkg: white;
