--- a/frontend/src/posts/PostsList.scss
+++ b/frontend/src/posts/PostsList.scss
@@ -1,3 +1,57 @@
+@use '../../public/variables' as *;
+@use '../../public/styles' as styles;
+
+.postedBy {
+  font-weight: $font-weight-bold;
+}
+
+.createdAt {
+  font-weight: $font-weight-lighter;
+  font-size:  $font-size-secondary;
+  line-height: $line-height-secondary;
+}
+
+.buttonBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center; 
+  button {
+    font-size: $font-size-button;
+    line-height: $line-height-button;
+    width: 50%;
+  }
+}
+
+.parent {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center; 
+  padding : 24px;
+}
+
+.child {
+  background: $darker-bkg;
+  width: 100%;
+  margin: 12px;
+  img {
+    width: 100%;
+  }
+}
+
+.childText{
+  padding : 16px;
+}
+
+.LikeDislike{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-start; 
+}
+
+
 
 // @mixin images($width) {
 //     width: $width;
@@ -89,173 +143,3 @@
 //     font-style: italic;
 //     font-weight: normal;
 // }
-
-
-.postedBy {
-    font-weight: 600;
-  }
-  
-  .createdAt {
-    font-weight: 300;
-    font-size:  10px;
-    line-height: 16px;
-  }
-  
-  .buttonBox button {
-    font-size: 20px;
-    line-height: 32px;
-  }
-
-  .parent {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center; 
-    padding : 24px;
-  }
-
-.child {
-    background: #151820;
-    /* margin: 3px; */
-    width: 100%;
-    margin: 12px;
-
-  }
-
-.childText{
-  padding : 16px;
-}
-
-.child img {
-    width: 100%;
-}
-
-.buttonBox {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center; 
-  }
-
-
-  
-.LikeDislike{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: flex-start; 
-  }
-  
-  
-  /* Extra small devices (phones, 600px and down) */
-  @media only screen and (max-width: 600px) { }
-  
-  /* Small devices (portrait tablets and large phones, 600px and up) */
-  @media only screen and (min-width: 600px) {
-    /* .child {
-      width: 70%;
-    } */
-  
-    .parent {
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      align-items: flex-start; 
-      flex-wrap: wrap;
-    }
-  
-    .child {
-      width: 40%;
-    }
-  
-    .menuPadShow{
-      width : 40%
-    }
-  }
-  
-  /* Medium devices (landscape tablets, 768px and up) */
-  @media only screen and (min-width: 768px) {
-      .parent {
-          display: flex;
-          flex-direction: row;
-          justify-content: flex-start;
-          align-items: flex-start; 
-          flex-wrap: wrap;
-        }
-  
-        .child {
-          width: 30%;
-        }
-  
-        .menuPadShow{
-          width : 30%
-        }
-   }
-  
-  /* Large devices (laptops/desktops, 992px and up) */
-  @media only screen and (min-width: 992px) { 
-      .parent {
-          display: flex;
-          flex-direction: row;
-          justify-content: flex-start;
-          align-items: flex-start; 
-          flex-wrap: wrap;
-        }
-  
-        .child {
-          width: 30%;
-        }
-  
-        .menuPadShow{
-          width : 20%
-        }
-  }
-  
-  /* Extra large devices (large laptops and desktops, 1200px and up) */
-  @media only screen and (min-width: 1200px) { 
-      .parent {
-          display: flex;
-          flex-direction: row;
-          justify-content: flex-start;
-          align-items: flex-start; 
-          flex-wrap: wrap;
-        }
-  
-        .child {
-          width: 30%;
-        }
-      
-        .menuPadShow{
-          width : 20%
-        }
-  }
-
-
-  
-
-.menuPadHidden {
-    display : none;
-  }
-  
-  .menuPadShow {
-    z-index: 100;
-    position: absolute;
-    display : flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    top: 0;
-    right: 0;
-    width: 50%;
-    height: 100%;
-    background: #252A38;
-    opacity: 90%;
-    gap: 30px;
-  }
-  
-  .menuLink{
-    font-weight: 400;
-    font-size: 24px;
-  }
-  
-  
