--- a/frontend/src/posts/PostsList.scss
+++ b/frontend/src/posts/PostsList.scss
@@ -44,7 +44,7 @@
   padding : 16px;
 }
 
-.LikeDislike{
+.interaction-count-box{
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
