--- a/frontend/src/posts/PostsList.scss
+++ b/frontend/src/posts/PostsList.scss
@@ -11,7 +11,7 @@
   line-height: $line-height-secondary;
 }
 
-.buttonBox {
+.interaction-button-box {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
